fix: overflow on login and register page

--- a/KittySecurity/src/App.css
+++ b/KittySecurity/src/App.css
@@ -9,5 +9,4 @@ html, body #root{
   margin: 0;
   padding: 0;
   height: 100vh;
-  overflow: hidden;
 }
