--- a/KittySecurity/src/styles/Login.css
+++ b/KittySecurity/src/styles/Login.css
@@ -1,4 +1,10 @@
+.login-header{
+    height: 100%;
+    overflow: hidden;
+}
+
 .login-container {  
+    overflow: hidden;
     background-color: var(--kitty-black);
     width: 100%;
     height: 100vh;
@@ -25,7 +31,7 @@
 
 .pattern-bot img{
     width: 100%;
-    height: 100vh;
+    height: auto;
 }
 
 .pattern-top { 
@@ -34,7 +40,7 @@
 }
 .pattern-top img{
     width: 100%;
-    height: 100vh;
+    height: auto;
 }
 
 .login-form{
