--- a/KittySecurity/src/styles/Register.css
+++ b/KittySecurity/src/styles/Register.css
@@ -1,3 +1,8 @@
+.register-header{
+    height: 100%;
+    overflow: hidden;
+}
+
 .register-container {
     background-color: var(--kitty-black);
     width: 100%;
