--- a/KittySecurity/src/styles/StrongPassword.css
+++ b/KittySecurity/src/styles/StrongPassword.css
@@ -1,5 +1,6 @@
 .strong-password-container {
     height: 100%;
+    overflow: hidden;
 }
 
 .strong-password-main {  
